Remove bug where introduction is too big

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,7 +46,6 @@ a
 }
 .introduction
 {
-    width: 87vw;
     background-color: #1f2937;
     padding: 6.5vw;
 }
